--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ nav {
 
 .promo {
   min-height: 800px;
-  background: url("img/first_bg.png") center center/cover no-repeat;
+  background: url("../img/first_bg.png") center center/cover no-repeat;
   padding: 150px 0 135px 0; }
   .promo_header {
     color: #ffffff;
